fixing browse search alignment

--- a/less/sections/primo-search.less
+++ b/less/sections/primo-search.less
@@ -76,6 +76,9 @@
 .EXLSearchFieldRibbonFormSearchClear {
   display:inline-block;
 }
+.EXLBrowseSearchFieldRibbonFormSearchClear {
+  display: none; 
+}
 
 .EXLSearchFieldRibbonAdvancedSearchLink,
 .EXLSearchFieldRibbonBrowseSearchLink,
